@@ -7,7 +7,7 @@
  * Copyright (c) 2009-2013,
  * Gesellschaft fuer numerische Simulation mbH Braunschweig, Germany
  *
- * Copyright (c) 2009-2019,
+ * Copyright (c) 2009-2019, 2022,
  * Technische Universitaet Dresden, Germany
  *
  * Copyright (c) 2009-2013,
@@ -62,6 +62,18 @@
 #include <UTILS_Debug.h>
 
 /* uppercase defines */
+
+/** @def MPI_Alloc_mem_U
+    Exchanges MPI_Alloc_mem_U with MPI_ALLOC_MEM.
+    It is used for the Fortran wrappers of MPI_Alloc_mem.
+ */
+#define MPI_Alloc_mem_U MPI_ALLOC_MEM
+
+/** @def MPI_Free_mem_U
+    Exchanges MPI_Free_mem_U with MPI_FREE_MEM.
+    It is used for the Fortran wrappers of MPI_Free_mem.
+ */
+#define MPI_Free_mem_U MPI_FREE_MEM
 
 /** @def MPI_Get_version_U
     Exchanges MPI_Get_version_U with MPI_GET_VERSION.
@@ -142,6 +154,18 @@
 #define MPI_Op_free_U MPI_OP_FREE
 
 /* lowercase defines */
+
+/** @def MPI_Alloc_mem_L
+    Exchanges MPI_Alloc_mem_L with mpi_alloc_mem.
+    It is used for the Fortran wrappers of MPI_Alloc_mem.
+ */
+#define MPI_Alloc_mem_L mpi_alloc_mem
+
+/** @def MPI_Free_mem_L
+    Exchanges MPI_Free_mem_L with mpi_free_mem.
+    It is used for the Fortran wrappers of MPI_Free_mem.
+ */
+#define MPI_Free_mem_L mpi_free_mem
 
 /** @def MPI_Get_version_L
     Exchanges MPI_Get_version_L with mpi_get_version.
@@ -232,6 +256,44 @@
  * as it would require a "real" function if it is really needed
  * => we can save the f2c and c2s conversions */
 
+#if HAVE( DECL_PMPI_ALLOC_MEM ) && !defined( SCOREP_MPI_NO_EXTRA ) && !defined( SCOREP_MPI_NO_MISC ) && !defined( MPI_Alloc_mem )
+/**
+ * Measurement wrapper for MPI_Alloc_mem
+ * @note Auto-generated by wrapgen from template: SCOREP_Fmpi_Std.w
+ * @note Fortran interface
+ * @note Introduced with MPI-2
+ * @ingroup misc
+ */
+void
+FSUB( MPI_Alloc_mem )( MPI_Aint* size, MPI_Info* info, void* baseptr, int* ierr )
+{
+    SCOREP_IN_MEASUREMENT_INCREMENT();
+
+
+    *ierr = MPI_Alloc_mem( *size, *info, baseptr );
+
+    SCOREP_IN_MEASUREMENT_DECREMENT();
+}
+#endif
+#if HAVE( DECL_PMPI_FREE_MEM ) && !defined( SCOREP_MPI_NO_EXTRA ) && !defined( SCOREP_MPI_NO_MISC ) && !defined( MPI_Free_mem )
+/**
+ * Measurement wrapper for MPI_Free_mem
+ * @note Auto-generated by wrapgen from template: SCOREP_Fmpi_Std.w
+ * @note Fortran interface
+ * @note Introduced with MPI-2
+ * @ingroup misc
+ */
+void
+FSUB( MPI_Free_mem )( void* base, int* ierr )
+{
+    SCOREP_IN_MEASUREMENT_INCREMENT();
+
+
+    *ierr = MPI_Free_mem( base );
+
+    SCOREP_IN_MEASUREMENT_DECREMENT();
+}
+#endif
 #if HAVE( DECL_PMPI_GET_VERSION ) && !defined( SCOREP_MPI_NO_EXTRA ) && !defined( SCOREP_MPI_NO_MISC ) && !defined( MPI_Get_version )
 /**
  * Measurement wrapper for MPI_Get_version
@@ -528,6 +590,46 @@ FSUB( MPI_Op_free )( MPI_Op* op, int* ierr )
 
 #else /* !NEED_F2C_CONV */
 
+#if HAVE( DECL_PMPI_ALLOC_MEM ) && !defined( SCOREP_MPI_NO_EXTRA ) && !defined( SCOREP_MPI_NO_MISC ) && !defined( MPI_Alloc_mem )
+/**
+ * Measurement wrapper for MPI_Alloc_mem
+ * @note Auto-generated by wrapgen from template: SCOREP_Mpi_F2c_C2f.w
+ * @note Fortran interface
+ * @note Introduced with MPI-2
+ * @ingroup misc
+ * For the order of events see @ref MPI_Alloc_mem
+ */
+void
+FSUB( MPI_Alloc_mem )( MPI_Aint* size, MPI_Fint* info, void* baseptr, MPI_Fint* ierr )
+{
+    SCOREP_IN_MEASUREMENT_INCREMENT();
+
+
+    *ierr = MPI_Alloc_mem( *size, PMPI_Info_f2c( *info ), baseptr );
+
+    SCOREP_IN_MEASUREMENT_DECREMENT();
+}
+#endif
+#if HAVE( DECL_PMPI_FREE_MEM ) && !defined( SCOREP_MPI_NO_EXTRA ) && !defined( SCOREP_MPI_NO_MISC ) && !defined( MPI_Free_mem )
+/**
+ * Measurement wrapper for MPI_Free_mem
+ * @note Auto-generated by wrapgen from template: SCOREP_Mpi_F2c_C2f.w
+ * @note Fortran interface
+ * @note Introduced with MPI-2
+ * @ingroup misc
+ * For the order of events see @ref MPI_Free_mem
+ */
+void
+FSUB( MPI_Free_mem )( void* base, MPI_Fint* ierr )
+{
+    SCOREP_IN_MEASUREMENT_INCREMENT();
+
+
+    *ierr = MPI_Free_mem( base );
+
+    SCOREP_IN_MEASUREMENT_DECREMENT();
+}
+#endif
 #if HAVE( DECL_PMPI_GET_VERSION ) && !defined( SCOREP_MPI_NO_EXTRA ) && !defined( SCOREP_MPI_NO_MISC ) && !defined( MPI_Get_version )
 /**
  * Measurement wrapper for MPI_Get_version
