@@ -7,7 +7,7 @@
  * Copyright (c) 2009-2013,
  * Gesellschaft fuer numerische Simulation mbH Braunschweig, Germany
  *
- * Copyright (c) 2009-2019,
+ * Copyright (c) 2009-2019, 2022,
  * Technische Universitaet Dresden, Germany
  *
  * Copyright (c) 2009-2013,
@@ -1434,6 +1434,25 @@ FSUB( MPI_Win_lock_all )( int* assert, MPI_Win* win, int* ierr )
     SCOREP_IN_MEASUREMENT_DECREMENT();
 }
 #endif
+#if HAVE( DECL_PMPI_WIN_SHARED_QUERY ) && !defined( SCOREP_MPI_NO_RMA ) && !defined( MPI_Win_shared_query )
+/**
+ * Measurement wrapper for MPI_Win_shared_query
+ * @note Auto-generated by wrapgen from template: SCOREP_Fmpi_Std.w
+ * @note Fortran interface
+ * @note Introduced with MPI-3
+ * @ingroup rma
+ */
+void
+FSUB( MPI_Win_shared_query )( MPI_Win* win, int* rank, MPI_Aint* size, int* disp_unit, void* baseptr, int* ierr )
+{
+    SCOREP_IN_MEASUREMENT_INCREMENT();
+
+
+    *ierr = MPI_Win_shared_query( *win, *rank, size, disp_unit, baseptr );
+
+    SCOREP_IN_MEASUREMENT_DECREMENT();
+}
+#endif
 #if HAVE( DECL_PMPI_WIN_UNLOCK_ALL ) && !defined( SCOREP_MPI_NO_RMA ) && !defined( MPI_Win_unlock_all )
 /**
  * Measurement wrapper for MPI_Win_unlock_all
@@ -2365,6 +2384,26 @@ FSUB( MPI_Win_lock_all )( MPI_Fint* assert, MPI_Fint* win, MPI_Fint* ierr )
 
 
     *ierr = MPI_Win_lock_all( *assert, PMPI_Win_f2c( *win ) );
+
+    SCOREP_IN_MEASUREMENT_DECREMENT();
+}
+#endif
+#if HAVE( DECL_PMPI_WIN_SHARED_QUERY ) && !defined( SCOREP_MPI_NO_RMA ) && !defined( MPI_Win_shared_query )
+/**
+ * Measurement wrapper for MPI_Win_shared_query
+ * @note Auto-generated by wrapgen from template: SCOREP_Mpi_F2c_C2f.w
+ * @note Fortran interface
+ * @note Introduced with MPI-3
+ * @ingroup rma
+ * For the order of events see @ref MPI_Win_shared_query
+ */
+void
+FSUB( MPI_Win_shared_query )( MPI_Fint* win, MPI_Fint* rank, MPI_Aint* size, MPI_Fint* disp_unit, void* baseptr, MPI_Fint* ierr )
+{
+    SCOREP_IN_MEASUREMENT_INCREMENT();
+
+
+    *ierr = MPI_Win_shared_query( PMPI_Win_f2c( *win ), *rank, size, disp_unit, baseptr );
 
     SCOREP_IN_MEASUREMENT_DECREMENT();
 }
