@@ -7,7 +7,7 @@
  * Copyright (c) 2009-2013,
  * Gesellschaft fuer numerische Simulation mbH Braunschweig, Germany
  *
- * Copyright (c) 2009-2019,
+ * Copyright (c) 2009-2019, 2022,
  * Technische Universitaet Dresden, Germany
  *
  * Copyright (c) 2009-2013,
@@ -62,10 +62,10 @@
 #include <UTILS_Debug.h>
 
 /* uppercase defines */
-#pragma wrapgen multiple restrict(gmisc+!n_c2f+!n_f2c+!n_mem+!nddress) skel/SCOREP_Fmpi_DefineU.w
+#pragma wrapgen multiple restrict(gmisc+!n_c2f+!n_f2c+!nddress) skel/SCOREP_Fmpi_DefineU.w
 
 /* lowercase defines */
-#pragma wrapgen multiple restrict(gmisc+!n_c2f+!n_f2c+!n_mem+!nddress) skel/SCOREP_Fmpi_DefineL.w
+#pragma wrapgen multiple restrict(gmisc+!n_c2f+!n_f2c+!nddress) skel/SCOREP_Fmpi_DefineL.w
 
 /**
  * @name Fortran wrappers
@@ -78,11 +78,11 @@
  * as it would require a "real" function if it is really needed
  * => we can save the f2c and c2s conversions */
 
-#pragma wrapgen multiple restrict(gmisc+!n_c2f+!n_f2c+!n_mem+!nddress) skel/SCOREP_Fmpi_Std.w
+#pragma wrapgen multiple restrict(gmisc+!n_c2f+!n_f2c+!nddress) skel/SCOREP_Fmpi_Std.w
 
 #else /* !NEED_F2C_CONV */
 
-#pragma wrapgen multiple restrict(gmisc+!n_c2f+!n_f2c+!n_mem+!nddress) skel/SCOREP_Mpi_F2c_C2f.w
+#pragma wrapgen multiple restrict(gmisc+!n_c2f+!n_f2c+!nddress) skel/SCOREP_Mpi_F2c_C2f.w
 
 #endif
 
