@@ -7,7 +7,7 @@
  * Copyright (c) 2009-2013,
  * Gesellschaft fuer numerische Simulation mbH Braunschweig, Germany
  *
- * Copyright (c) 2009-2019,
+ * Copyright (c) 2009-2019, 2022,
  * Technische Universitaet Dresden, Germany
  *
  * Copyright (c) 2009-2013,
@@ -121,7 +121,7 @@
   @{
   */
 #pragma wrapgen multiple regex(MPI_(Raccumulate|Rget_accumulate|Rget|Rput|Get_accumulate|Fetch_and_op|Compare_and_swap)$) skel/SCOREP_Fmpi_Std.w
-#pragma wrapgen multiple regex(MPI_Win_(allocate|allocate_shared|create_dynamic|lock_all|unlock_all|flush|flush_all|flush_local|flush_local_all)$) skel/SCOREP_Fmpi_Std.w
+#pragma wrapgen multiple regex(MPI_Win_(allocate|allocate_shared|create_dynamic|lock_all|unlock_all|flush|flush_all|flush_local|flush_local_all|shared_query)$) skel/SCOREP_Fmpi_Std.w
 
 #else /* !NEED_F2C_CONV */
 
@@ -167,7 +167,7 @@
   @{
   */
 #pragma wrapgen multiple regex(MPI_(Raccumulate|Rget_accumulate|Rget|Rput|Get_accumulate|Fetch_and_op|Compare_and_swap)$) skel/SCOREP_Mpi_F2c_C2f.w
-#pragma wrapgen multiple regex(MPI_Win_(allocate|allocate_shared|create_dynamic|lock_all|unlock_all|flush|flush_all|flush_local|flush_local_all)$) skel/SCOREP_Mpi_F2c_C2f.w
+#pragma wrapgen multiple regex(MPI_Win_(allocate|allocate_shared|create_dynamic|lock_all|unlock_all|flush|flush_all|flush_local|flush_local_all|shared_query)$) skel/SCOREP_Mpi_F2c_C2f.w
 
 /**
  * @}
