@@ -53,6 +53,10 @@ Bugfixes:
 - MPI request management now uses internal Score-P memory management.
   However, a measurement will now have increased memory requirements.
   Please be aware of this.
+- Add missing Fortran wrappers to the MPI adapter for
+  - `MPI_Alloc_mem`
+  - `MPI_Free_mem`
+  - `MPI_Win_shared_query`
 
 ------------------- Released version 7.1 -----------------------------
 
